<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.chuhelan.htg.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.chuhelan.htg.ui.orders.OrdersFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.chuhelan.htg.ui.mine.MineFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_mine" />
</navigation>