<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavigationViewHead">

    <ImageView
        android:id="@+id/navigation_user_profile"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginStart="@dimen/default_space"
        android:layout_marginTop="@dimen/default_space"
        android:background="@drawable/bg_round_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/navigation_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:text="@string/text_user_name_def"
        app:layout_constraintBottom_toBottomOf="@+id/navigation_user_profile"
        app:layout_constraintStart_toEndOf="@+id/navigation_user_profile"
        app:layout_constraintTop_toTopOf="@+id/navigation_user_profile" />

    <ImageView
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:layout_marginStart="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/navigation_user_profile"
        app:layout_constraintStart_toEndOf="@+id/navigation_name"
        app:layout_constraintTop_toTopOf="@+id/navigation_name"
        android:src="@drawable/ic_chevron_right"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_space"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/default_space"
        android:background="@drawable/bg_vip_card"
        android:elevation="6dp"
        android:minHeight="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigation_user_profile">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="20sp"
            android:layout_marginStart="@dimen/default_space_small"
            android:layout_marginTop="@dimen/default_space_small"
            android:text="@string/text_vip_name"
            android:textColor="#7e680c"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar_vip"
            style="@style/update_progress_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_space_small"
            android:max="100"
            android:progress="50"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_space_small"
            android:text="v0"
            android:textColor="#7e680c"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/progressBar_vip"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <Button
            android:layout_width="70sp"
            android:layout_height="25sp"
            android:layout_marginEnd="@dimen/default_space_small"
            android:background="@color/trans"
            android:foreground="@drawable/bg_vip_button"
            android:padding="0sp"
            android:text="@string/text_vip_center"
            android:textColor="#7e680c"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/navigation_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_space_small"
            android:layout_marginTop="5dp"
            android:text="@string/text_vip_subtitle"
            android:textSize="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:textColor="@color/font_on_main"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/default_space_small"
            android:layout_marginTop="@dimen/default_space_small"
            android:layout_marginEnd="@dimen/default_space_small"
            android:background="#d8b013"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/navigation_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_space_small"
            android:layout_marginTop="@dimen/default_space_small"
            android:text="VIP 年费仅 120 CNY，享邮寄五折！"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            android:textColor="@color/font_on_main"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_space"
        android:layout_marginEnd="@dimen/default_space"
        android:background="@drawable/bg_main_card"
        android:elevation="3dp"
        android:minHeight="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        android:backgroundTint="@color/bg_2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_marginStart="50dp"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:src="@drawable/ic_radio_button_checked"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_space_small"
                android:text="@string/text_nav_check"
                app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/imageView5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:src="@drawable/ic_mail"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_space_small"
                android:text="@string/text_nav_msg"
                app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toTopOf="@+id/imageView6" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_space"
        android:layout_marginTop="@dimen/default_space"
        android:layout_marginEnd="@dimen/default_space"
        android:background="@drawable/bg_main_card"
        android:minHeight="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
        android:backgroundTint="@color/bg_2">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_space_small"
            android:layout_marginTop="@dimen/default_space_small"
            android:text="@string/text_nav_box1"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5sp"
            android:background="@color/bg_2"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="40sp">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:src="@drawable/ic_radio_button_checked"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_space_small"
                    android:text="@string/text_fast_send"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                    app:layout_constraintStart_toEndOf="@+id/imageView8"
                    app:layout_constraintTop_toTopOf="@+id/imageView8" />

                <ImageView
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:layout_marginEnd="@dimen/default_space"
                    android:src="@drawable/ic_chevron_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="40sp">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:src="@drawable/ic_radio_button_checked"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_space_small"
                    android:text="@string/text_fast_get_code"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView9"
                    app:layout_constraintStart_toEndOf="@+id/imageView9"
                    app:layout_constraintTop_toTopOf="@+id/imageView9" />

                <ImageView
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:layout_marginEnd="@dimen/default_space"
                    android:src="@drawable/ic_chevron_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>